release/deploy-robo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robohash
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: robohash-pod
  template:
    metadata:
      labels:
        pod: robohash-pod
    spec:
      containers:
        - name: robohash-container
          image: registry.eqlan.ru/fill/robohash:v1.0
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
          
---
apiVersion: v1
kind: Service
metadata:
  name: robohash-internal
spec:
  selector:
    pod: robohash-pod
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
